@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-23T16:06:49Z",
-  "count_outdated" : 1576,
-  "uniques_outdated" : 433,
-  "count" : 1628,
+  "timestamp" : "2022-06-24T00:30:34Z",
+  "count_outdated" : 1579,
+  "uniques_outdated" : 434,
+  "count" : 1631,
   "uniques" : 460,
   "clones" : [
-    {
-      "timestamp": "2022-06-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
