@@ -1,3 +1,10 @@
+2022-06-24T00:30:34Z:
+* notice: last 14d: unq all: 13 52
+* notice: prev accum: outdated-unq outdated-all / unq all: 433 1576 / 460 1628
+* notice: next accum: outdated-unq outdated-all / unq all: 434 1579 / 460 1631
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-09] / [2022-06-23]
+
 2022-06-23T16:06:49Z:
 * notice: last 14d: unq all: 13 52
 * notice: prev accum: outdated-unq outdated-all / unq all: 433 1576 / 460 1629
